# Chimera

./: .gitignore  package-lock.json  package.json
demo-sites/hello-world/: index.html  style.css
frontend/: package-lock.json
src/: App.css  App.tsx  Dashboard.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/content/: chunker.rs  cid.rs  merkle.rs  mod.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/network/: protocol.rs
src-tauri/src/node/: behaviour.rs  config.rs  event_loop.rs  handle.rs  mod.rs  swarm.rs
src-tauri/src/publisher/: pipeline.rs
src-tauri/src/retriever/: pipeline.rs
src-tauri/src/storage/: chunk_store.rs  database.rs  mod.rs
src/components/ui/: button.jsx  card.jsx
src/pages/: Browser.css  Browser.tsx  Dashboard.css  Dashboard.tsx  Upload.css  Upload.tsx
